# exploring-cpp

./: .gitignore  .ninja_deps  .ninja_log  .proto  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.ninja  cmake_install.cmake  compile.sh  exploringcpp.cbp  main  main.cpp  run.sh
.cmake/api/v1/reply/: cache-v2-92587a3e0c36b96fc063.json  cache-v2-dfdf32bdf382bc0ca0f9.json  cmakeFiles-v1-64b74846a134d7bd7fb5.json  cmakeFiles-v1-68eaeff726853bd456c4.json  codemodel-v2-3bc9c1ad319f4ea3fd44.json  codemodel-v2-79f33d3070a8351f22c3.json  index-2023-12-16T14-05-01-0138.json  index-2023-12-19T22-54-26-0992.json  target-command_cli-a2f1d7bd96c0058a9925.json  target-command_cli-c15bc67189655d176695.json  target-config_handler-2c38e1066f5bedc2fae3.json  target-main-30c3736c9d4ed84593ad.json  target-main-c90060ed62b9c30c0aff.json  target-module-2cc4bfaaa917647d7214.json  target-module-2d8305adf2845f8d2fca.json  target-ui-96819ed954e2ae756140.json  target-ui-fca9f20a0fb416120e4a.json  target-utils-07bc505daa8e8d562098.json  target-utils-7ba824dfd01e7b674495.json  toolchains-v1-2d3a6f629e69a8fe670c.json
doc/notes/: functions.md  stringmaniuplation.md  time.md
include/: command_cli.h  config.h  config_handler.h  event_manager.h  module.h  ui.h  utils.h
projects/to-do-list/: main.cpp
src/: command_cli.cpp  config_handler.cpp  event_manager.cpp  module.cpp  utils.cpp
